--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-3">
-					<p class="copyright">Copyright &copy; 2014 - Bootstraptaste.com</p>
+					<p class="copyright">Copyright &copy; 2014 - .com</p>
 			</div>
 		</div>		
 	</div>	
